--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Growth Mindset</title>
+</head>
+<body>
+    <h1>Welcome to the Growth Mindset Website</h1>
+    <p>Follow us on Instagram for daily motivation and growth tips!</p>
+    <a href="https://www.instagram.com/riset_oevolve?igsh=cnk4N281NHY4amtn&utm_source=qr" target="_blank">
+        <button>Visit our Instagram</button>
+    </a>
+</body>
+</html>
