--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>成長心態網站</title>
+    <title>Growth Mindset</title>
 </head>
 <body>
-    <h1>成長心態網站</h1>
-    <p>姓名: 曾惠玲</p>
-    <p>科系: 華語文學系</p>
-    <p>學校: 國立聯合大學</p>
-    <p>學號: U1243002</p>
-
-    <h2>網站簡介</h2>
-    <p>這個網站的目的是分享成長心態的概念與技巧，幫助人們勇敢面對挑戰，並從失敗中學習成長。</p>
-
-    <h2>Instagram</h2>
-    <p>請關注我們的Instagram，獲取更多激勵性內容: <a href="https://www.instagram.com/riset_oevolve" target="_blank">riset_oevolve</a></p>
-
-    <h2>GitHub 倉庫</h2>
-    <p>這個網站的原始代碼可以在GitHub上找到: <a href="https://github.com/Linggg18/growth-mindset" target="_blank">成長心態 GitHub</a></p>
+    <h1>Welcome to Growth Mindset</h1>
+    <p>This is your website where you share motivational quotes, stories, and content about growth mindset!</p>
+    <p>Follow us on Instagram: <a href="https://www.instagram.com/riset_oevolve" target="_blank">riset_oevolve</a></p>
 </body>
 </html>
