--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Welcome to Growth Mindset</h1>
-    <p>This is your website where you share motivational quotes, stories, and content about growth mindset!</p>
-    <p>Follow us on Instagram: <a href="https://www.instagram.com/riset_oevolve" target="_blank">riset_oevolve</a></p>
+    <p>Follow us on Instagram:</p>
+    
+    <!-- Embed Instagram Post -->
+    <iframe src="https://www.instagram.com/p/POST_ID/embed" width="400" height="480" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+
 </body>
 </html>
