--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth Mindset</title>
 </head>
 <body>
-    <h1>Welcome to Growth Mindset</h1>
-    <p>Follow us on Instagram:</p>
-    
-    <!-- Embed Instagram Post -->
-    <iframe src="https://www.instagram.com/p/POST_ID/embed" width="400" height="480" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
-
+    <h1>Welcome to the Growth Mindset Website</h1>
+    <p>Follow us on Instagram for daily motivation and growth tips!</p>
+    <a href="https://www.instagram.com/riset_oevolve?igsh=cnk4N281NHY4amtn&utm_source=qr" target="_blank">
+        <button>Visit our Instagram</button>
+    </a>
 </body>
 </html>
