--- a/index.htm
+++ b/index.htm
@@ -20,5 +20,8 @@
 
     <h2>GitHub 倉庫</h2>
     <p>這個網站的原始代碼可以在GitHub上找到: <a href="https://github.com/Linggg18/growth-mindset" target="_blank">成長心態 GitHub</a></p>
+
+    <h2>PowerPoint Presentation</h2>
+    <p>點擊此處查看我的 PPT: <a href="https://www.canva.com/design/DAGjlOJBIDA/ax5OrpLyrt9dEQfNUvg8rA/edit?utm_content=DAGjlOJBIDA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">成長心態 PPT</a></p>
 </body>
 </html>
