--- a/growth-mindset.html
+++ b/growth-mindset.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pahami Growth Mindset</title>
+  <title>Understanding Growth Mindset</title>
 </head>
 <body>
-  <h1>Pahami Growth Mindset</h1>
-  <p>Tonton video berikut untuk memahami apa itu Growth Mindset:</p>
+  <h1>Understanding Growth Mindset</h1>
+  <p>Watch the video below to understand what a Growth Mindset is:</p>
 
   <iframe width="560" height="315" src="https://www.youtube.com/embed/r0qpJxEhOP4" title="What Having a Growth Mindset Actually Means" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
