--- a/video.html
+++ b/video.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Video Edukasi: Growth Mindset</title>
+  <title>Educational Videos: Growth Mindset</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <h1>🎥 Video Edukasi: Growth Mindset</h1>
+  <h1>🎥 Educational Videos: Growth Mindset</h1>
   <div class="video-grid">
     <div class="video-item">
       <iframe src="https://www.youtube.com/embed/r0qpJxEhOP4" allowfullscreen></iframe>
