--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
     <li><a href="https://linggg18.github.io/growth-mindset/index.htm">index.htm</a></li>
     <li><a href="https://linggg18.github.io/growth-mindset/growth-mindset.html">growth-mindset.html</a></li>
     <li><a href="https://github.com/Linggg18/growth-mindset">GitHub Repository</a></li>
-    <li><a href="https://linggg18.github.io/growth-mindset/index.htm">video.html</a></li>
+    <li><a href="https://linggg18.github.io/growth-mindset/video.html">video.html</a></li>
   </ul>
 </body>
 </html>
