--- a/games/games.html
+++ b/games/games.html
@@ -3,15 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <title>Growth Mindset Games</title>
+  <style>
+    /* Global Styles */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f7fc;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    h1 {
+      color: #2c3e50;
+      margin-top: 20px;
+      font-size: 3em;
+    }
+
+    p {
+      font-size: 1.2em;
+      color: #34495e;
+      padding: 10px;
+    }
+
+    /* Styling for the game list */
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    li {
+      margin: 15px 0;
+    }
+
+    /* tombol pink muda */
+    a {
+      display: inline-block;
+      text-decoration: none;
+      padding: 15px 30px;
+      background-color: #ffb6c1; /* pink muda */
+      color: white;
+      border-radius: 8px;
+      font-size: 1.2em;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    /* hover ungu muda */
+    a:hover {
+      background-color: #dda0dd; /* ungu muda */
+      transform: scale(1.1);
+    }
+
+    /* footer */
+    footer {
+      background-color: #d8bfd8; /* ungu muda lembut */
+      color: #2c3e50;
+      padding: 15px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+    }
+    footer p {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <h1>Growth Mindset Games</h1>
-  <p>Choose a game to play:</p>
+  <p>Choose a game to play and boost your growth mindset:</p>
   <ul>
     <li><a href="check-in.html">Check-in Game</a></li>
     <li><a href="quiz.html">Quiz Game</a></li>
     <li><a href="affirmations.html">Affirmation Game</a></li>
     <li><a href="spin.html">Spin the Wheel Game</a></li>
   </ul>
+
+  <footer>
+    <p>Powered by Growth Mindset – Your path to a better you!</p>
+  </footer>
 </body>
 </html>
