--- a/games/spin.html
+++ b/games/spin.html
@@ -1,134 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Growth Mindset Quiz</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Spin the Wheel Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #e8f5e9;
-      color: #2e7d32;
+      font-family: 'Arial', sans-serif;
       text-align: center;
+      background: #fff0f5;
+      color: #6a1b9a;
       padding: 20px;
     }
+
     h1 {
       margin-bottom: 10px;
     }
-    #quiz-container {
-      max-width: 800px;
+
+    #wheel {
+      margin: 40px auto;
+      width: 300px;
+      height: 300px;
+      border: 10px solid #ba68c8;
+      border-radius: 50%;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      transition: transform 4s ease-out;
+    }
+
+    .segment {
+      width: 50%;
+      height: 50%;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform-origin: 0% 0%;
+      background: #f8bbd0;
+      border: 1px solid #fff;
+      color: #4a148c;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 14px;
+      text-align: center;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+
+    #pointer {
+      width: 0; height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-bottom: 30px solid #f06292;
       margin: 0 auto;
-      text-align: left;
     }
-    .question-block {
-      margin: 15px 0;
-      padding: 15px;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .question-block h3 {
-      margin: 0 0 10px;
-      font-size: 1.1em;
-    }
-    .question-block label {
-      display: block;
-      margin: 5px 0;
-    }
+
     button {
-      margin: 20px auto;
-      display: block;
+      margin-top: 30px;
       padding: 10px 25px;
-      background-color: #66bb6a;
+      font-size: 1.1em;
+      background-color: #ce93d8;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       color: white;
-      font-size: 1em;
       cursor: pointer;
       transition: background-color 0.3s;
     }
+
     button:hover {
-      background-color: #388e3c;
+      background-color: #ab47bc;
     }
+
     #result {
-      margin-top: 20px;
-      font-size: 1.2em;
+      margin-top: 25px;
+      font-size: 1.3em;
       font-weight: bold;
     }
-    .back {
+
+    a.back {
       display: inline-block;
       margin-top: 30px;
       text-decoration: none;
-      color: #2e7d32;
+      color: #6a1b9a;
     }
-    .back:hover {
+
+    a.back:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>🧠 Growth Mindset Quiz</h1>
-  <p>Answer all <strong>300</strong> questions below:</p>
 
-  <div id="quiz-container"></div>
-
-  <button onclick="submitQuiz()">Submit</button>
+  <h1>🎡 Spin the Wheel</h1>
+  <div id="pointer"></div>
+  <div id="wheel"></div>
+  <button onclick="spin()">Spin!</button>
   <div id="result"></div>
   <a href="games.html" class="back">🔙 Back to Games</a>
 
   <script>
-    // Tema‐tema pertanyaan untuk variasi
-    const themes = [
-      "mistakes help you learn",
-      "effort leads to mastery",
-      "challenges make you stronger",
-      "feedback is a gift",
-      "failure is part of success",
-      "your brain grows with practice",
-      "setbacks are opportunities",
-      "persistence pays off",
-      "you can improve with effort",
-      "learning never stops"
+    const challenges = [
+      "Share one thing you're proud of today.",
+      "Do 10 jumping jacks and smile!",
+      "Name a mistake you learned from recently.",
+      "Say 'I can do it!' 3 times out loud!",
+      "Write a short goal for tomorrow.",
+      "Tell yourself: 'I'm growing every day!'",
+      "Close your eyes and breathe deeply for 10 seconds.",
+      "Compliment yourself sincerely.",
     ];
 
-    // Bangun array quizData dengan 300 objek pertanyaan
-    const quizData = [];
-    for (let i = 1; i <= 300; i++) {
-      const theme = themes[(i - 1) % themes.length];
-      quizData.push({
-        question: `Question ${i}: Do you agree that <em>${theme}</em>?`,
-        options: ["Yes", "No", "Sometimes"],
-        answer: "Yes"
-      });
-    }
+    const wheel = document.getElementById("wheel");
+    const numSegments = challenges.length;
+    const anglePerSegment = 360 / numSegments;
 
-    // Render quiz ke DOM
-    const container = document.getElementById('quiz-container');
-    quizData.forEach((q, idx) => {
-      const block = document.createElement('div');
-      block.className = 'question-block';
-      block.innerHTML = `
-        <h3>${q.question}</h3>
-        ${q.options.map(opt => `
-          <label>
-            <input type="radio" name="q${idx}" value="${opt}">
-            ${opt}
-          </label>
-        `).join('')}
-      `;
-      container.appendChild(block);
+    // Generate wheel segments
+    challenges.forEach((text, i) => {
+      const seg = document.createElement("div");
+      seg.className = "segment";
+      seg.style.transform = `rotate(${i * anglePerSegment}deg) skewY(-${90 - anglePerSegment}deg)`;
+      seg.textContent = text;
+      wheel.appendChild(seg);
     });
 
-    // Fungsi submit dan hitung skor
-    function submitQuiz() {
-      let score = 0;
-      quizData.forEach((q, idx) => {
-        const sel = document.querySelector(`input[name="q${idx}"]:checked`);
-        if (sel && sel.value === q.answer) score++;
-      });
-      document.getElementById('result').textContent =
-        `Your score: ${score} / ${quizData.length}`;
-      window.scrollTo(0, document.body.scrollHeight);
+    let spinning = false;
+
+    function spin() {
+      if (spinning) return;
+      spinning = true;
+      document.getElementById("result").textContent = "";
+
+      const randomSpin = 360 * 5 + Math.floor(Math.random() * 360);
+      wheel.style.transition = "transform 4s ease-out";
+      wheel.style.transform = `rotate(${randomSpin}deg)`;
+
+      const segmentIndex = Math.floor(((360 - (randomSpin % 360)) % 360) / anglePerSegment);
+      setTimeout(() => {
+        document.getElementById("result").textContent = `🎉 Your Challenge: ${challenges[segmentIndex]}`;
+        spinning = false;
+      }, 4000);
     }
   </script>
 </body>
