--- a/games/games.html
+++ b/games/games.html
@@ -79,6 +79,7 @@
     <li><a href="quiz.html">Quiz Game</a></li>
     <li><a href="affirmations.html">Affirmation Game</a></li>
     <li><a href="spin.html">Spin the Wheel Game</a></li>
+    <li><a href="garden.html">Growth Garden Game</a></li>
   </ul>
 
   <footer>
