--- a/games/games.html
+++ b/games/games.html
@@ -11,6 +11,9 @@
       margin: 0;
       padding: 0;
       text-align: center;
+      min-height: 100vh;  /* Memastikan halaman bisa digulir */
+      display: flex;
+      flex-direction: column;
     }
 
     h1 {
@@ -33,6 +36,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      flex-grow: 1; /* Membuat konten utama mengambil ruang lebih banyak */
     }
 
     li {
@@ -62,10 +66,10 @@
       background-color: #d8bfd8; /* ungu muda lembut */
       color: #2c3e50;
       padding: 15px;
-      position: fixed;
+      position: relative;  /* Ubah menjadi relative */
       width: 100%;
-      bottom: 0;
     }
+
     footer p {
       margin: 0;
     }
