--- a/links.html
+++ b/links.html
@@ -101,6 +101,12 @@
         <div class="title">video.html</div>
         <div class="desc">Watch the Growth Mindset video presentation.</div>
       </a>
+      <!-- Link to Growth Mindset Games -->
+      <a class="card" href="https://linggg18.github.io/growth-mindset/games.html">
+        <div class="icon">🎮</div>
+        <div class="title">Growth Mindset Games</div>
+        <div class="desc">Play games to boost your Growth Mindset!</div>
+      </a>
     </div>
   </div>
 
