--- a/links.html
+++ b/links.html
@@ -102,7 +102,7 @@
         <div class="desc">Watch the Growth Mindset video presentation.</div>
       </a>
       <!-- Link to Growth Mindset Games -->
-      <a class="card" href="https://linggg18.github.io/growth-mindset/games.html">
+      <a class="card" href="https://linggg18.github.io/growth-mindset/games/games.html">
         <div class="icon">🎮</div>
         <div class="title">Growth Mindset Games</div>
         <div class="desc">Play games to boost your Growth Mindset!</div>
